# calculator

./: README.md  calculator.py  operations.py  pyproject.toml  test_calculator.py
