[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Nina Speranskaya <nina-sp@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.1"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
